lint: Migrate typing.Text check to semgrep.
Signed-off-by: Anders Kaseorg <anders@zulip.com>

--- a/tools/semgrep.yml
+++ b/tools/semgrep.yml
@@ -133,3 +133,9 @@ rules:
     pattern: eval
     severity: ERROR
     message: "Do not use eval under any circumstances; consider json.loads instead"
+
+  - id: typing-text
+    languages: [python]
+    pattern: typing.Text
+    severity: ERROR
+    message: "Use str instead of typing.Text"
