--- a/zerver/webhooks/newrelic/fixtures/incident_acknowledged.json
+++ b/zerver/webhooks/newrelic/fixtures/incident_acknowledged.json
@@ -2,10 +2,10 @@
     "incident_acknowledge_url": "https://alerts.newrelic.com/accounts/2941966/incidents/1234/acknowledge",
     "duration": 5,
     "incident_id": 1234,
-    "details": "I am a test Violation",
+    "details": "Violation description test.",
+    "policy_name": "Test policy name",
     "condition_name": "Server Down",
     "timestamp": 1605133931151,
     "current_state": "acknowledged",
-    "policy_name": "New Relic Alert - Test Policy",
     "incident_url": "https://alerts.newrelic.com/accounts/2941966/incidents/1234"
 }
