--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "webpack-cli": "^3.3.2",
     "webpack4-bundle-tracker": "^0.0.1-beta",
     "winchan": "^0.2.1",
+    "workbox-webpack-plugin": "^6.0.2",
     "xdate": "^0.8.2",
     "xvfb": "^0.4.0",
     "zxcvbn": "^4.4.2"
