--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -361,6 +361,7 @@
             "files": ["frontend_tests/**"],
             "globals": {
                 "document": false,
+                "navigator": false,
                 "window": false
             },
             "rules": {
