eslint: Remove and prohibit unused eslint-disable directives.
Signed-off-by: Anders Kaseorg <anders@zulip.com>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
         "warnOnUnsupportedTypeScriptVersion": false,
         "sourceType": "unambiguous"
     },
+    "reportUnusedDisableDirectives": true,
     "rules": {
         "array-callback-return": "error",
         "arrow-body-style": "error",
