--- a/zerver/webhooks/newrelic/fixtures/incident_acknowledged.json
+++ b/zerver/webhooks/newrelic/fixtures/incident_acknowledged.json
@@ -6,5 +6,6 @@
     "condition_name": "Server Down",
     "timestamp": 1605133931151,
     "current_state": "acknowledged",
+    "owner": "Alice",
     "incident_url": "https://alerts.newrelic.com/accounts/2941966/incidents/1234"
 }
