api: Require can_create_users permission to create users via API.
Allowing any admins to create arbitrary users is not ideal because it
can lead to abuse issues.  We should require something stronger that
requires the server operator's approval and thus we add a new
can_create_users permission.

--- a/zerver/openapi/zulip.yaml
+++ b/zerver/openapi/zulip.yaml
@@ -4179,7 +4179,7 @@ paths:
       operationId: create_user
       tags: ["users"]
       description: |
-        {!api-admin-only.md!}
+        {!can-create-users-only.md!}
 
         Create a new user account via the API.
 
