giphy: Add GIPHY picker UI in compose box.
Use GIPHY grid SDK to integrate GIF picker UI like emoji picker
in compose box.

Hide giphy picker for realms which don't have the API key
available.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -156,6 +156,7 @@
                 "flatpickr": false,
                 "floating_recipient_bar": false,
                 "gear_menu": false,
+                "giphy": false,
                 "hash_util": false,
                 "hashchange": false,
                 "helpers": false,
