--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-typescript": "^7.3.3",
     "@babel/register": "^7.6.2",
+    "@giphy/js-components": "^4.1.0",
+    "@giphy/js-fetch-api": "^2.0.1",
     "@uppy/core": "^1.7.1",
     "@uppy/progress-bar": "^1.3.4",
     "@uppy/xhr-upload": "^1.4.2",
@@ -65,6 +67,7 @@
     "stacktrace-gps": "^3.0.4",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^4.1.0",
+    "throttle-debounce": "^3.0.1",
     "turndown": "^7.0.0",
     "url-loader": "^4.1.1",
     "webfonts-loader": "^7.0.1",
