circleci: Remove Codecov workaround.
Codecov has released the new version which fixes the find error.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,16 +92,8 @@ aliases:
         mv /home/circleci/zulip/var/.coverage /home/circleci/zulip/.coverage
 
         . /srv/zulip-py3-venv/bin/activate
-        # TODO: Check that the next release of codecov doesn't
-        # throw find error.
-        # codecov==2.0.16 introduced a bug which uses "find"
-        # for locating files which is buggy on some platforms.
-        # It was fixed via https://github.com/codecov/codecov-python/pull/217
-        # and should get automatically fixed here once it's released.
-        # We cannot pin the version here because we need the latest version for uploading files.
-        # see https://community.codecov.io/t/http-400-while-uploading-to-s3-with-python-codecov-from-travis/1428/7
-        pip install codecov && codecov \
-          || echo "Error in uploading coverage reports to codecov.io."
+
+        pip install codecov && codecov
 
   - &build_production
     run:
