Rename list_render -> ListWidget.
Similar to DropdownListWidget, list_render is actually a widget. The
changed case more accurately represents how its supposed to be used
as a Class.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -168,8 +168,8 @@
                 "jQuery": false,
                 "keydown_util": false,
                 "lightbox": false,
-                "list_render": false,
                 "list_util": false,
+                "ListWidget": false,
                 "loading": false,
                 "localStorage": false,
                 "local_message": false,
