js: Escape strings interpolated into CSS selectors with CSS.escape.
Signed-off-by: Anders Kaseorg <anders@zulip.com>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -348,6 +348,7 @@
         {
             "files": ["frontend_tests/**"],
             "globals": {
+                "CSS": false,
                 "document": false,
                 "navigator": false,
                 "window": false
