--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clipboard": "^2.0.4",
     "core-js": "^3.6.5",
     "css-loader": "^5.0.0",
+    "css.escape": "^1.5.1",
     "emoji-datasource-google": "^6.0.0",
     "emoji-datasource-google-blob": "npm:emoji-datasource-google@^3.0.0",
     "emoji-datasource-twitter": "^6.0.0",
