pycodestyle: Improve comments documenting excludes.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,8 @@
 [pycodestyle]
 ignore =
-    # Each of these rules are ignored for the explained reason.
+    # These rules are ignored for the reasons explained in the comments.
+    # See https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes for
+    # error code definitions.
 
     # All formatting is handled by Black.
     E1,
