--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "stylelint-config-standard": "^20.0.0",
     "svgo": "^1.2.2",
     "swagger-parser": "^10.0.0",
+    "ts-node": "^9.1.1",
     "typescript": "^4.0.2",
     "vnu-jar": "^21.2.5",
     "webpack-dev-server": "^3.5.1",
