node_tests: Don’t read page_params from deprecated global variable.
Follow up to commit 89aa3155a97f9cd7977766a530787e2a14219091 (#17262).

Signed-off-by: Anders Kaseorg <anders@zulip.com>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -112,16 +112,14 @@
                 "current_msg_list": false,
                 "home_msg_list": false,
                 "i18n": false,
-                "location": false,
-                "page_params": false
+                "location": false
             }
         },
         {
             "files": ["frontend_tests/puppeteer_lib/**", "frontend_tests/puppeteer_tests/**"],
             "globals": {
                 "$": false,
-                "current_msg_list": false,
-                "page_params": false
+                "current_msg_list": false
             }
         },
         {
