dependencies: Upgrade Source Sans Pro font to Source Sans 3.
https://blog.adobe.com/en/2020/11/30/whats-new-in-source-sans-3.html

Signed-off-by: Anders Kaseorg <anders@zulip.com>

--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "simplebar": "^5.2.1",
     "sortablejs": "^1.9.0",
     "sorttable": "^1.0.2",
-    "source-sans-pro": "^3.6.0",
+    "source-sans": "^3.28.0",
     "spectrum-colorpicker": "^1.8.1",
     "stacktrace-gps": "^3.0.4",
     "style-loader": "^2.0.0",
