lint: Rely on core gitlint skipping of revert commits.
gitlint 0.13.0 and above skip revert commits[1].  This obviates the
need for a custom rule.

[1] https://jorisroovers.com/gitlint/configuration/#ignore-revert-commits

--- a/requirements/dev.in
+++ b/requirements/dev.in
@@ -45,7 +45,7 @@ pyinotify
 tblib
 
 # Needed to lint Git commit messages
-gitlint
+gitlint>=0.13.0
 
 # Needed for visualising cprofile reports
 snakeviz
