api docs: Fix claim that subject won't appear for PMs.
This was inaccurate after testing the implementation, and there's an
argument that we shouldn't move it as it will simplify migrating to a
world where (some) private message threads can have topics.

--- a/zerver/openapi/zulip.yaml
+++ b/zerver/openapi/zulip.yaml
@@ -9773,8 +9773,11 @@ components:
         subject:
           type: string
           description: |
-            The `topic` of the message (only present for stream
-            messages).  The field name is a legacy holdover from when topics were
+            The `topic` of the message.  Currently always `""` for private messages,
+            though this could change if Zulip adds support for topics in private
+            message conversations.
+
+            The field name is a legacy holdover from when topics were
             called "subjects" and will eventually change.
         topic_links:
           type: array
