dependencies: Upgrade JavaScript dependencies.
Signed-off-by: Anders Kaseorg <anders@zulip.com>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -131,11 +131,7 @@
         },
         {
             "files": ["**/*.ts"],
-            "extends": [
-                "plugin:@typescript-eslint/recommended",
-                "plugin:import/typescript",
-                "prettier/@typescript-eslint"
-            ],
+            "extends": ["plugin:@typescript-eslint/recommended", "plugin:import/typescript"],
             "parserOptions": {
                 "project": "tsconfig.json"
             },
