gitignore: Ignore zulip-thumbor-venv.
Signed-off-by: Anders Kaseorg <anders@zulip.com>

--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,7 @@ zulip-git-version
 /zproject/prod_settings.py
 /zulip-current-venv
 /zulip-py3-venv
+/zulip-thumbor-venv
 
 ## Files left by various editors and local environments
 # (Ideally these should be in everyone's respective personal gitignore files.)
