--- a/.eslintignore
+++ b/.eslintignore
@@ -10,4 +10,6 @@
 !/var/puppeteer
 /var/puppeteer/*
 !/var/puppeteer/test_credentials.d.ts
+/zulip-current-venv
 /zulip-py3-venv
+/zulip-thumbor-venv
