--- a/.github/workflows/zulip-ci.yml
+++ b/.github/workflows/zulip-ci.yml
@@ -143,7 +143,8 @@ jobs:
           pip install codecov && codecov || echo "Error in uploading coverage reports to codecov.io."
 
       - name: Store Puppeteer artifacts
-        if: ${{ matrix.include_frontend_tests }}
+        # Upload these on failure, as well
+        if: ${{ always() && matrix.include_frontend_tests }}
         uses: actions/upload-artifact@v2
         with:
           name: puppeteer
