UserDisplaySettings: Allow user to remap final narrow for escape key.
Allow user to manually set the narrow of their choice which
will be rendered when user hits the final escape key.

Final escape key: Escape keypress which remains unhandled by all other
UI components visible to user.

TextField is used to allow users to set long stream + topic narrow
names in the urls.

Values starting with "#" give an error in this setting as we don't
want user to store hash. We may in future decide to remove hash
from URL altogether so this decision is consistent with it.

--- a/zerver/openapi/zulip.yaml
+++ b/zerver/openapi/zulip.yaml
@@ -6694,6 +6694,13 @@ paths:
                           Present if `update_display_settings` is present in `fetch_event_types`.
 
                           The color scheme selected by the user.
+                      final_escape_narrow:
+                        type: string
+                        description: |
+                          Present if `update_display_settings` is present in `fetch_event_types`.
+
+                          The narrow rendered when the pressed escape key is unhandled by all other
+                          visible UI elements.
                       default_language:
                         type: string
                         description: |
