--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-loader": "^8.0.6",
     "blueimp-md5": "^2.10.0",
     "cache-loader": "^4.0.0",
+    "callsites": "^3.1.0",
     "clean-css": "^5.1.0",
     "clipboard": "^2.0.4",
     "core-js": "^3.6.5",
