timestamp: Add feature to generate calendar file.
Added a click handler to timestamp for generating
calendar(.ics) file.
The file can later be imported across various
calendar services for scheduling events/appointment.

Fixes #17274.

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "handlebars-loader": "^1.7.1",
     "html-webpack-plugin": "^4.0.0-beta.8",
     "i18next": "^19.0.0",
+    "ical-generator": "^1.15.4",
     "jquery": "^3.4.1",
     "jquery-caret-plugin": "^1.5.2",
     "jquery-validation": "^1.19.0",
